--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -112,6 +112,7 @@
   --gap3: 0.9375rem;
   --gap4: 1.25rem;
   --gap5: 1.5625rem;
+  --gap6: 1.875rem;
   --gap7: 2.1875rem;
   --gap8: 2.5rem;
   --gap11: 4.375rem;
