--- a/src/pages/booking.astro
+++ b/src/pages/booking.astro
@@ -5,30 +5,138 @@ import TestimonialsSlider from "../components/TestimonialsSlider.astro";
 import KontaktFormular from "../components/KontaktFormular.astro";
 import Button from "../components/Button.astro";
 ---
-<MainLayout>
+<MainLayout title="Booking & promoting">
 <section class="booking">
-  <h1>Booking og promoting</h1>
-  <div class="tekst">
+  <article>
+    <h1>Booking og promoting</h1>
+  </article>
+  <article class="om">
+  <div class="indhold">
+    <div class="tekst">
     <h2>Skal vi stå for din næste optræden?</h2>
     <p>Hos Kanonproduktion stræber vi efter at du får den bedste oplevelse, derfor behøver du ikke løfte en finger, du skal bare komme og gøre det du gør bedst - så gør vi nemlig det samme ;)
       Vi tager personligt hånd om alt - fra planlægning og koordinering til udførelse.
       Så uanset om i repræsentere et firma, er en privatperson eller artist, skræddersyer vi hos Kanonproduktion hvert arrengement efter jeres behov og ønsker.
-      
+      <br>
+      <br>
       Lad os gøre jeres næste arrangement til en uforglemmelig oplevelse!</p>
-   <Button>Læs mere</Button>
+      </div>
+      <div class="button">
+      <Button size="lg" link="/booking" variant="secondary">Læs mere</Button>
+      </div>
   </div>
-  <img src="" alt="">
+ 
+  <img src="/img/uffe_holm.webp" alt="">
+  </article>
 </section>
 <section class="faq">
     <h2>Faq</h2>
+    <article>
     <Faq></Faq>
+</article>
 </section>
 <section class="testimonials">
  <h2>Hvad artisterne siger</h2>
- <TestimonialsSlider></TestimonialsSlider>
+ <article>
+  <TestimonialsSlider></TestimonialsSlider>
+ </article>
   </section>
   <section class="kontakt">
     <h2>Kontakt os</h2>
+    <article>
     <KontaktFormular></KontaktFormular>
+    </article>
   </section>
 </MainLayout>
+
+<style>
+  	article{
+		padding-inline: var(--gap11);
+	}
+
+  h1 {
+    padding-bottom: 74px;
+  }
+
+	section {
+		padding-block: 74px;
+	}
+
+  .line {
+		border-left: 2px solid var(--color-background-stroke);
+		height: 679px;
+	}
+
+  .om {
+    display: grid;
+    grid-template-columns: 2fr 2fr;
+		justify-content: center;
+		align-items: center;
+
+		padding: 0px var(--gap11);
+		gap: var(--gap13);
+  }
+
+  img {
+    width: 100%;
+    height: auto;
+  }
+
+  .faq h2 {
+		display: flex;
+		justify-content: center;
+
+    padding-block: var(--gap7);
+		border-top: 2px solid var(--color-background-stroke);
+		border-bottom: 2px solid var(--color-background-stroke);
+  }
+
+  .testimonials h2 {
+		display: flex;
+		justify-content: center;
+
+    padding-block: var(--gap7);
+		border-top: 2px solid var(--color-background-stroke);
+		border-bottom: 2px solid var(--color-background-stroke);
+  }
+
+  .kontakt h2 {
+		display: flex;
+		justify-content: center;
+
+    padding-block: var(--gap7);
+		border-top: 2px solid var(--color-background-stroke);
+		border-bottom: 2px solid var(--color-background-stroke);
+  }
+
+  .tekst h2{
+    color: var(--color-text-h2-secondary);
+    padding-bottom: 30px;
+  }
+
+  .tekst p {
+    padding-bottom: 90px;
+  }
+
+  .tekst > * {
+    width: 576px;
+  }
+
+  .button {
+    display: flex;
+    width: 800px;
+    height: 3px;
+    align-items: center;
+    flex-shrink: 0;
+    border-bottom: 2px solid var(--color-background-stroke);
+  }
+
+  .indhold {
+    height: 705px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border-right:  2px solid var(--color-background-stroke);
+  }
+
+</style>
