--- a/src/components/KontaktFormular.astro
+++ b/src/components/KontaktFormular.astro
@@ -55,10 +55,6 @@ const { size } = Astro.props
 <style> 
 
 form {
-    border-top: 2px solid var(--color-background-stroke);
-    border-right: 2px solid var(--color-background-stroke);
-    border-left: 2px solid var(--color-background-stroke);
-
     padding: var(--gap4);
     display: flex;
     flex-direction: column;
@@ -172,6 +168,7 @@ input[type=radio] {
 .knap {
     display: flex;
     flex-direction: row;
+    gap: var(--gap2);
 }
 
 
