--- a/src/pages/tidligere.astro
+++ b/src/pages/tidligere.astro
@@ -1,32 +1,53 @@
 ---
+//Lav variablen "url" med vores URL fra supabase
+const url = "https://muqgfdguddfkghqhbdai.supabase.co/rest/v1/kanonproduktion_tidligere?";
+
+//Lav variablen "api" med vores api nøgle
+const api = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im11cWdmZGd1ZGRma2docWhiZGFpIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MTQ3NTI1MjcsImV4cCI6MjAzMDMyODUyN30.V1cmTeBITytZYDHSYEemvpkdSObU40QtSWsIqANjXBY";
+
+//Lav variablen "data" som venter på url fetchet med GET metode
+//API nøgle godkener adgang
+const data = await fetch(url, {
+  method: "GET",
+  headers: {
+    apikey: api,
+  },
+}).then((res) => res.json());
+//Dataen bliver hentet som JSON-fil
+
 import MainLayout from "../layouts/MainLayout.astro";
 import TidligereCard from "../components/TidligereCard.astro";
 ---
-<section class="intro">
-    <h1>Tidligere events</h1>
-    <h3>Se tidligere events og skab dig et overblik over vores events.</h3>
-    <div class="sti">
-        <div class="kommende">
-            <a href="/events">Kommende events</a>
+<MainLayout title="Tidligere events">
+    <section class="intro">
+        <h1>Tidligere events</h1>
+        <h3>Se tidligere events og skab dig et overblik over vores events.</h3>
+        <div class="sti">
+            <div class="kommende">
+                <a href="/events">Kommende events</a>
+            </div>
+            <div class="tidligere">
+                <a href="/tidligere">Tidligere events</a>
+            </div>
+            <div class="artister">
+                <a href="/artister">Artister</a>
+            </div>
         </div>
-        <div class="tidligere">
-            <a href="/tidligere">Tidligere events</a>
-        </div>
+    </section>
+    <section class="tidligere">
+        <h2>Året 2023</h2>
         <div class="artister">
-            <a href="/artister">Artister</a>
+            {data.map((person) => 
+                <TidligereCard 
+                    image={`/img/${person.image}`} 
+                    name={person.name} 
+                    date={person.date} 
+                    type={person.type} 
+                    />
+                )}
         </div>
-    </div>
-</section>
-<section class="tidligere">
-    <h2>Året 2023</h2>
-    <div class="artister">
-        <TidligereCard></TidligereCard>
-        <TidligereCard></TidligereCard>
-        <TidligereCard></TidligereCard>
-        <TidligereCard></TidligereCard>
-        <TidligereCard></TidligereCard>
-    </div>
-</section>
+    </section>
+</MainLayout>
 
 <style>
         a {
