--- a/src/components/ArtistCard.astro
+++ b/src/components/ArtistCard.astro
@@ -23,11 +23,8 @@ const {image, name, insta, face} = Astro.props;
        
 
 .billede {
-        /* width: 20.75rem;
-        height: 21.4375rem; */
-
-        width: 25rem;
-        height: 27rem;
+        width: 22.5rem;
+        height: auto;
     }
 
     h3{
@@ -45,11 +42,11 @@ const {image, name, insta, face} = Astro.props;
           
         }
     .social-links{
-        display: flex;
+    display: flex;
     flex-direction: row;
- padding-top: 1rem;
- justify-content: center;
-
+    padding-top: 1rem;
+    justify-content: center;
+    gap: 1rem;
     }
         .social-links a {
           color: var(--color-icon-some);
