--- a/src/pages/events.astro
+++ b/src/pages/events.astro
@@ -245,8 +245,9 @@ import Button from "../components/Button.astro";
     .artister {
 		display: flex;
         flex-wrap: wrap;
-		gap: var(--gap7);
-		justify-content: center;
+		column-gap: var(--gap6);
+        row-gap: var(--gap7);
+		justify-content: flex-start;
         padding-block: var(--gap7);
 	}
 </style>
