--- a/src/pages/artister.astro
+++ b/src/pages/artister.astro
@@ -126,6 +126,17 @@ import Sti from "../components/Sti.astro";
         outline-width: 2px;
     }
 
+    @media (max-width: 1514px) {
+        .artister {
+		display: flex;
+    flex-wrap: wrap;
+		column-gap: var(--gap13);
+    row-gap: var(--gap7);
+		justify-content: flex-start;
+    padding-block: var(--gap7);
+	}
+    }
+
     @media (max-width: 1024px) {
         .artister{
         display: grid;
@@ -154,5 +165,9 @@ import Sti from "../components/Sti.astro";
       font-size: var(--Headline4-small);
       padding-left: 0rem;
     }
+
+    article {
+    padding-inline: var(--gap5);
+  }
     }
 </style>
