--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -1,4 +1,4 @@
-<a href="/" class="logo"><img src="/public/stort_logo.svg" alt="Kanonproduktion logo"></a>
+<a href="/" class="logo"><img src="/stort_logo.svg" alt="Kanonproduktion logo"></a>
 
 <style>
     img {
