--- a/src/components/ArtistCard.astro
+++ b/src/components/ArtistCard.astro
@@ -55,8 +55,38 @@ const {image, name, insta, face} = Astro.props;
 
         .fa-bell {
           color: var(--color-icon-stars);
-    
+          
         }
+        .fa-bell:hover {
+            animation: fa-bell 0.8s cubic-bezier(0.455, 0.030, 0.515, 0.955) both;
+        }
+        @keyframes fa-bell {
+  0%,
+  100% {
+    transform: rotate(0deg);
+    transform-origin: 50% 0;
+  }
+  10% {
+    transform: rotate(2deg);
+  }
+  20%,
+  40%,
+  60% {
+    transform: rotate(-4deg);
+  }
+  30%,
+  50%,
+  70% {
+    transform: rotate(4deg);
+  }
+  80% {
+    transform: rotate(-2deg);
+  }
+  90% {
+    transform: rotate(2deg);
+  }
+}
+
     
         .social-links a:hover{
             color: var(--color-icon-some-hover);
