--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -13,7 +13,7 @@ import Video from "../components/Video.astro";
     </section>
 <section class="manden_bag">
     <article class="om">
-        <img src="/img/uffe_holm.webp" alt="">
+        <img src="/img/torsten-frame.wepb" alt="">
          <div class="line"></div>
             <div class="om_tekst">
                 <div class="citat2">
