--- a/src/pages/events.astro
+++ b/src/pages/events.astro
@@ -13,6 +13,8 @@ const data = await fetch(url, {
     apikey: api,
   },
 }).then((res) => res.json());
+
+console.log(data);
 //Dataen bliver hentet som JSON-fil
 import MainLayout from "../layouts/MainLayout.astro";
 import EventCard from "../components/EventCard.astro";
@@ -47,7 +49,7 @@ import Button from "../components/Button.astro";
             {data.map((person) => 
             <EventCard 
                 image={`/img/${person.image}`} 
-                status={`${person.status}`} 
+                status={person.status} 
                 name={person.name} 
                 price={person.price} 
                 date={person.date} 
