--- a/src/pages/artist/[slug].astro
+++ b/src/pages/artist/[slug].astro
@@ -49,32 +49,32 @@ import MainLayout from "../../layouts/MainLayout.astro";
 
 <MainLayout title="Artist">
     <section class="artist">
-        <h1></h1>
-        <img src="" alt="">
+        <h1>{person.name}</h1>
+        <img src={`/img/${person.im}`} alt="">
         <p></p>
         <div class="information">
             <div class="tekst">
-                <h2></h2>
-                <p></p>
-                <h4></h4>
+                <h2>{person.name}</h2>
+                <p>{person.description}</p>
+                <h4>FØLG MED PÅ VORES PROFIL OG SE NÅR ___ GÅR PÅ NÆSTE GANG!</h4>
                 <SocialIcon></SocialIcon>
             </div>
             <div class="infoboks">
                 <div class="dato">
-                    <p></p>
-                    <h3></h3>
+                    <p>{person.day}</p>
+                    <h3>{person.date}</h3>
                 </div>
                 <div class="aabner">
-                    <p></p>
-                    <h3></h3>
+                    <p>Dørene åbner</p>
+                    <h3>{person.doors}</h3>
                 </div>
                 <div class="tid">
-                    <p></p>
-                    <h3></h3>
+                    <p>Showet starter</p>
+                    <h3>{person.begin}</h3>
                 </div>
                 <div class="pris">
-                    <p></p>
-                    <h3></h3>
+                    <p>Pris inkl. gebyr</p>
+                    <h3>{person.price}</h3>
                 </div>
                 <Button></Button>
             </div>
