event card mobil

--- a/src/components/EventCard.astro
+++ b/src/components/EventCard.astro
@@ -201,4 +201,39 @@ console.log("props",Astro.props)
         align-items: center;
     }
 
+    @media (max-width: 430px){
+        article{
+        width: 20rem; 
+    }
+
+    .kunstner {
+        width: 18rem;
+       
+    }
+
+    .kunstner h3 {
+        width: 16rem;
+        height: 3.5rem;
+        left: -12px;
+    }
+
+    h3{
+        font-size: var(--Headline3-small);
+    }
+    .type p {
+        font-size: var(--Label-small);
+        left: -12px;
+
+    }
+
+    .information {
+        width: 18rem;
+    }
+
+    .knap {
+        gap: 0.5rem;
+    }
+
+    }
+
 </style>
