--- a/src/pages/events.astro
+++ b/src/pages/events.astro
@@ -42,7 +42,7 @@ import Button from "../components/Button.astro";
                 <div class="tidligere">
                     <a href="/tidligere">Tidligere events</a>
                 </div>
-                <div class="artister">
+                <div class="artist">
                     <a href="/artister">Artister</a>
                 </div>
             </div>
@@ -119,6 +119,8 @@ import Button from "../components/Button.astro";
     article {
         padding-inline: var(--gap11);
     }
+
+  
 
     section {
         padding-block: 74px;
@@ -260,4 +262,32 @@ import Button from "../components/Button.astro";
 		justify-content: flex-start;
         padding-block: var(--gap7);
 	}
+
+    @media (max-width: 1024px){
+ .artister{
+    overflow: auto;
+    flex-wrap: nowrap;
+        white-space: nowrap;
+        width:100%;
+        margin-inline: auto;
+    
+    } 
+    }
+
+
+    @media (max-width: 430px){
+ .artister{
+    overflow: auto;
+    flex-wrap: nowrap;
+        white-space: nowrap;
+        width:100%;
+        margin-inline: auto;
+    
+    } 
+
+    article {
+        padding-inline: var(--gap5);
+    }
+    }
+   
 </style>
