--- a/src/components/Video.astro
+++ b/src/components/Video.astro
@@ -1,1 +1,1 @@
-<video src="/img/kanonproduktion_video.mp4" width="100%" height="auto" autoplay></video>
+<video loop src="/img/kanonproduktion_video.mp4" width="100%" height="auto" autoplay></video>
