--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -38,6 +38,18 @@ const { variant, link, size } = Astro.props;
 
     width: 160px;
   }
+
+  #xs {
+    display: flex;
+    padding: 0.4125rem 0.825rem;
+    justify-content: center;
+    align-items: center;
+    font-size: 0.792rem;
+    font-weight: 700;
+
+    width: 99px;
+  }
+  
   
   .primary{
     background-color: var(--color-background-button-primary);
