--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -127,6 +127,12 @@ import Button from "../components/Button.astro";
 		padding-inline: var(--gap11);
 	}
 
+	.hero{
+
+		padding-block: 0px;
+
+	}
+
 	section {
 		padding-block: 74px;
 	}
