mobil ikke done

--- a/src/components/TidligereCard.astro
+++ b/src/components/TidligereCard.astro
@@ -93,4 +93,72 @@ article{
         justify-content: space-between;
     }
 
+  
+
+    @media (max-width: 430px){
+        article{
+            width: 11rem;
+height: 12rem;
+    }
+
+    .hvem{
+        height: 10rem;
+    }
+
+    .kunstner {
+ width: 8.9375rem;
+height: 8rem;
+       
+    }
+
+    .kunstner h3 {
+        width: 10rem;
+        height: 3rem;
+        left: -10px;
+        bottom: 0px; 
+    }
+
+    h3{
+        font-size: 1rem;
+    }
+    .type p {
+        font-size: 0.5rem;
+        left: 0px;
+        margin-bottom: 0.2rem;
+
+    }
+
+    .place p {
+        font-size: 0.8rem;
+       margin-bottom: 0.2rem;
+    
+    }
+
+    .information {
+        width: 10rem;
+        gap: 1.33713rem;
+    }
+
+    .price {
+        width: 4.86113rem;
+        padding: 0.34725rem;
+        gap: 1.31944rem;
+    }
+
+    .large {
+        display: none;
+    }
+
+    .small {
+        display: flex;
+        justify-content: center;
+    }
+
+    .knap {
+        gap: 1.125rem;
+        width: auto;
+        padding: 0.625rem;
+    }
+
+    }
 </style>
