--- a/src/pages/tidligere.astro
+++ b/src/pages/tidligere.astro
@@ -131,4 +131,56 @@ article {
 		justify-content: flex-start;
         padding-block: var(--gap7);
 	}
+
+
+    @media (min-width: 1513px){
+
+.artister {
+    column-gap: var(--gap11);
+}
+}
+
+@media (max-width: 1450px){
+.artister {
+column-gap: var(--gap11);
+}
+}
+
+@media (max-width: 1024px) {
+    .artister{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+
+}
+h1{
+  font-size: var(--Headline1-medium);
+  padding-left: 0rem;
+}
+
+h3{
+  font-size: var(--Headline3-medium);
+  padding-left: 0rem;
+}
+}
+
+@media (max-width: 430px) {
+h1{
+  font-size: var(--Headline1-small);
+  padding-left: 0rem;
+
+}
+
+h3{
+  font-size: var(--Headline4-small);
+  padding-left: 0rem;
+}
+
+article {
+padding-inline: var(--gap5);
+}
+
+.artister {
+column-gap: var(--gap3);
+}
+}
 </style>
