--- a/src/pages/tidligere.astro
+++ b/src/pages/tidligere.astro
@@ -39,9 +39,15 @@ import Sti from "../components/Sti.astro";
             </div>
         </article>
     </section>
-    <section class="tidligere">
+   <section class="animeret">
+        <div id="animated-text-strip">
+            <span class="marquee">Året 2023 <span class="circle"></span> Året 2023 <span class="circle"></span> Året 2023 <span class="circle"></span> Året 2023 <span class="circle"></span>&nbsp;</span>
+            <span class="marquee">Året 2023 <span class="circle"></span> Året 2023 <span class="circle"></span> Året 2023 <span class="circle"></span> Året 2023 <span class="circle"></span>&nbsp;</span>
+            <span class="marquee">Året 2023 <span class="circle"></span> Året 2023 <span class="circle"></span> Året 2023 <span class="circle"></span> Året 2023 <span class="circle"></span>&nbsp;</span>
+          </div>
+        </section>
+          <section class="tidligere">
         <article>
-            <h2>Året 2023</h2>
             <div class="artister">
                 {data.map((person) => 
                     <TidligereCard 
@@ -60,6 +66,10 @@ import Sti from "../components/Sti.astro";
 
 article {
         padding-inline: var(--gap11);
+    }
+
+    .animeret{
+        padding-block: 0px;
     }
 
     section {
@@ -129,9 +139,77 @@ article {
 		column-gap: var(--gap6);
         row-gap: var(--gap7);
 		justify-content: flex-start;
-        padding-block: var(--gap7);
 	}
 
+    #animated-text-strip{
+        display: flex;
+        flex-flow: row nowrap;
+        align-items: center;
+        overflow: hidden;
+
+        padding-block: var(--gap7);
+		border-top: 2px solid var(--color-background-stroke);
+		border-bottom: 2px solid var(--color-background-stroke);
+    }
+
+    #animated-text-strip .marquee {
+        white-space: nowrap;
+        animation: marquee 10s linear infinite;
+        max-width: none;
+    }
+
+    @keyframes marquee {
+        0% {
+            transform: translate(0, 0);
+        }
+        100% {
+            transform: translate(-100%, 0);
+        }
+    }
+
+    #animated-text-strip-reverse{
+        display: flex;
+        flex-flow: row nowrap;
+        align-items: center;
+        overflow: hidden;
+
+        padding-block: var(--gap7);
+		border-top: 2px solid var(--color-background-stroke);
+		border-bottom: 2px solid var(--color-background-stroke);
+    }
+
+    #animated-text-strip-reverse .marquee {
+        white-space: nowrap;
+        animation: other 10s linear infinite;
+        max-width: none;
+    }
+
+    @keyframes other {
+        0% {
+            transform: translate(-100%, 0);
+        }
+        100% {
+            transform: translate(0, 0);
+        }
+    }
+
+    .marquee {
+        font-family: "Inter", sans-serif;
+        font-size: var(--Headline2-large);
+        font-style: normal;
+        font-weight: 900;
+        line-height: normal;
+        text-transform: uppercase;
+    }
+
+    .circle {
+        display: inline-flex;
+        width: var(--gap4);
+        height: var(--gap4);
+        border-radius: 50%;
+        background-color: var(--color-background-stroke);
+        margin-bottom: 5px;
+    }
 
     @media (min-width: 1513px){
 
