--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -1,9 +1,23 @@
 <a href="/" class="logo"><img src="/stort_logo.svg" alt="Kanonproduktion logo"></a>
 
 <style>
+img {
+        width: 75%;
+        height: auto;
+    }
+
+    @media (min-width: 1024px) {
     img {
         width: 75%;
         height: auto;
         margin-inline: auto;
+    }
+    }
+
+    @media (max-width: 390px) {
+    img {
+        width: 100%;
+        height: auto;
+    }
     }
 </style>
