Booking, om, kontakt - monil o ipad

--- a/src/components/KontaktFormular.astro
+++ b/src/components/KontaktFormular.astro
@@ -173,4 +173,31 @@ input[type=radio] {
 }
 
 
+@media (max-width: 1025px) {
+
+    form {
+        gap: var(--gap4);
+    }
+    .flex {
+        flex-direction: column;
+        gap: var(--gap4);
+    }
+
+    input, textarea {
+    width: 730px;
+}
+.knapper {
+width: 730px;
+}
+}
+
+@media (max-width: 391px) {
+input, textarea {
+width: 344.5px;
+}
+.knapper {
+width: 344.5px;
+}
+}
+
 </style>
