--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -26,7 +26,7 @@ import Logo from "./Logo.astro"
 
   <style>
 
-    @media screen and (min-width: 1025px) {
+    @media screen and (min-width: 1026px) {
     header {
       top: 0;
       width: 100%;
@@ -97,7 +97,7 @@ import Logo from "./Logo.astro"
       min-height: 44px;
     }
   }
-  @media (max-width: 1024px) {
+  @media (max-width: 1025px) {
 
     header {
       width: 100%;
@@ -107,7 +107,7 @@ import Logo from "./Logo.astro"
     }
     .banner {
       background-color: var(--color-background-nav);
-      padding: var(--gap5) var(--gap4);
+      padding: var(--gap5) var(--gap6);
 
       display: flex;
       justify-content: space-between;
@@ -190,7 +190,10 @@ import Logo from "./Logo.astro"
     }
   }
 
-  @media (max-width: 430px) {
+  @media (max-width: 390px) {
+    .banner {
+      padding: var(--gap5) var(--gap4);
+    }
     .menu.shown a {
       font-size: var(--Nav-small);
     }
